# a2a-retail-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  all_files_with_content.txt  dump_project.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: python.yaml
backend/: __init__.py
backend/agents/customer_service_a2a/: __init__.py  agent.py  agent_executor.py  server.py
backend/agents/host_agent/: __init__.py  agent.py  agent_executor.py  server.py
backend/agents/inventory_agent_a2a/: __init__.py  agent.py  agent_executor.py  server.py
backend/config/: settings.py
backend/server/: demo_server.py
backend/tests/: README.md  __init__.py  conftest.py  quick_search_test.py  run_tests.py  test_customer_service_agent.py  test_host_agent.py  test_integration.py  test_inventory_agent.py
backend/utils/: a2a_utils.py  generate_inventory_jsonl.py  vector_search_store.py
frontend/: __init__.py  app.py  enhanced_streaming.py  streaming.py
frontend/state/: host_agent_service.py  state.py
frontend/static/: styles.css
scripts/: cli_client.py  dev_utils.py  start_a2a_demo.sh  stop_agents.sh  test_a2a_agents.py  test_a2a_setup.py
scripts/utils/: README.md  debug_imports.py  simple_frontend.py
